# chat-app-v2

./: Cargo.toml
src/: constants.rs  main.rs  modules.rs
src/modules/: logger.rs  opts.rs  peer.rs
src/modules/peer/: behaviour.rs  bootstrap.rs  event.rs  mode.rs  peer.rs
src/modules/traits/: peer.rs
